# scwrap

./: README.md  main.py  pyproject.toml
scwrap/: __init__.py  browser.py  parallel.py  scwrap.py  utils.py
